2005-07-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_directory),
	(totem_pl_parser_ignore), (totem_pl_parser_parse_internal),
	(totem_pl_parser_parse):
	* src/plparse/totem-pl-parser.h: add a TOTEM_PL_PARSER_RESULT_IGNORED
	retval, and use it to avoid ignored files getting in the playlist
	as unhandled files would

2005-07-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_ignore):
	ignore text/* and image/* files

2005-07-08  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_class_init),
	(totem_pl_parser_write_pls), (totem_pl_parser_write_with_title),
	(totem_pl_parser_write), (totem_pl_parser_finalize),
	(totem_pl_parser_add_pls), (totem_pl_parser_mimetype_is_ignored),
	(totem_pl_parser_parse_internal),
	(totem_pl_parser_add_ignored_scheme),
	(totem_pl_parser_add_ignored_mimetype):
	* src/plparse/totem-pl-parser.h: add totem_pl_parser_write_with_title ()
	and totem_pl_parser_add_ignored_mimetype() for the benefit of Rhythmbox
	(Closes: #148347)

2005-07-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in: clean up the xine-lib version checking, thanks
	to Thomas for spotting it

2005-07-04  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* README: remove GStreamer DVD menus TODO item

2005-07-04  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade: make the Album name selectable, not the
	label that goes with the album name (spotted by Jan Arne Petersen)
	(Closes: #308671)

2005-07-04  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/playlist-16.png:
	* data/playlist-24.png:
	* data/playlist.glade:
	* data/totem.glade:
	* data/totem.schemas.in:
	* src/Makefile.am:
	* src/ev-sidebar.[ch]:
	* src/totem-menu.h:
	* src/totem-playlist.c: (totem_playlist_get_toplevel),
	(totem_playlist_error), (totem_playlist_add_files),
	(totem_playlist_save_files), (update_repeat_cb),